move files to static; add local bootstrap

--- a/links/index.html
+++ b/links/index.html
@@ -2,10 +2,6 @@
 
 <html>
 <head>
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="../favicon.ico" />
     <link rel="apple-touch-icon" href="../favicon.png" />
@@ -19,6 +15,12 @@
     <link rel="stylesheet" href="../assets/fontawesome/css/brands.min.css" />
     <link rel="stylesheet" href="../assets/fontawesome/css/solid.min.css" />
 
+    <link rel="stylesheet" type="text/css" href="../assets/bootstrap-5/css/bootstrap-grid.min.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/bootstrap-5/css/bootstrap.css" />
+
+    <!-- <script type="text/javascript" src="assets/jquery/jquery-3.6.3.min.js"></script> -->
+    <script type="text/javascript" src="../assets/bootstrap-5/js/bootstrap.bundle.min.js"></script>
+
     <link rel="stylesheet" href="../assets/css/style.css" />
     <link rel="stylesheet" href="../assets/css/linktree.css">
 </head>
@@ -26,7 +28,7 @@
 <body>
     <div class="page-wraper container">
         <div class="row justify-content-center align-self-center image-round">
-            <img id="userPhoto" src="../DHR_squared.png" style="width: 300px;" alt="User Photo">
+            <img id="userPhoto" src="../static/DHR_squared.png" style="width: 300px;" alt="User Photo">
         </div>
         <div class="row justify-content-center align-self-center mt-3 text-center">
             <div class="col">
@@ -52,7 +54,7 @@
             <a class="link" href="javascript:linkTo_UnCryptMailto('nbjmup;epnjojlAipfis/ofu');"><i class="fa fa-envelope fa-2x"></i><label>E-Mail</label><div></div></a>
             <a class="link" href="tel:+491785247697"><div><i class="fa fa-phone-alt fa-2x"></i>   <i class="fab fa-whatsapp fa-2x"></i>  <i class="fab fa-telegram fa-2x"></i></div><label style="margin-left: -91px !important;">Telefonnummer</label><div></div></a>
             <br />
-            <a class="link" href="../DHR.vcf" download title="Vcard Download only for Android and Windows"><i class="fa fa-address-book fa-2x"></i><label>Kontakt</label><div></div></a>
+            <a class="link" href="../static/DHR.vcf" download title="Vcard Download only for Android and Windows"><i class="fa fa-address-book fa-2x"></i><label>Kontakt</label><div></div></a>
         </div>
         
         <div class="row justify-content-center align-self-center mt-3 text-center heading">
@@ -76,8 +78,6 @@
     </div>
 
     <!-- Javascript -->
-    <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script> -->
-    <!-- <script  src="index.js"></script> -->
     <script src="../assets/js/custom.js"></script>
 </body>
 </html>
