--- a/impressum.html
+++ b/impressum.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    
+  <head>    
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link rel="icon" href="./favicon.ico" />
@@ -18,6 +15,9 @@
     <link rel="stylesheet" href="assets/fontawesome/css/fontawesome.min.css" />
     <link rel="stylesheet" href="assets/fontawesome/css/brands.min.css" />
     <link rel="stylesheet" href="assets/fontawesome/css/solid.min.css" />
+
+    <link rel="stylesheet" type="text/css" href="assets/bootstrap-5/css/bootstrap-grid.min.css" />
+    <link rel="stylesheet" type="text/css" href="assets/bootstrap-5/css/bootstrap.css" />
 
     <link rel="stylesheet" href="assets/css/style.css" />
     
