add impress and privacy-otice to al pages

--- a/links/index.html
+++ b/links/index.html
@@ -75,6 +75,14 @@
             <br />
             <a class="link" href="https://www.paypal.me/dhoehr"><i class="fab fa-paypal fa-2x"></i><label>PayPal</label><div></div></a>
         </div>
+        <div class="row justify-content-center align-self-center mt-3 text-center">
+            <div class="col">
+                <a href="../impressum.html">Impressum</a>
+            </div>
+            <div class="col">
+                <a href="../datenschutzerklaerung.html">Datenschutzerklärung</a>
+            </div>
+        </div>
     </div>
 
     <!-- Javascript -->
