--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         Interessiert bin ich an der Programmierung und die damit zusammenhängenden Prozesse in den Unternehmen und der Wirtschaft. <br /> 
                         Insbesondere interessiere ich mich für das DevOps-Engineering.<br /> 
                         <br />
-                        Aktuell studiere ich im 2. Semester des Master of Science Wirtschaftsinformatik und arbeite als Werkstudent in der IT-Consulting-Branche.
+                        Aktuell studiere ich im 3. Semester des Master of Science Wirtschaftsinformatik und arbeite als Werkstudent in der IT-Consulting-Branche.
                       </p>
                     </div>
                   </div>
@@ -100,8 +100,8 @@
                       <p>Schauen Sie gerne auch auf meinen anderen Online-Profilen vorbei und verschaffen Sie sich einen detaillierten Überblick über mich, meinen bisherigen Werdegang und meine Leistungen.</p>
                       <div class="moreContact mt-3">
                         <div class="link-button">
-                          <a href="https://de.linkedin.com/in/dominik-h%C3%B6hr"><i class="fab fa-linkedin"></i> LinkedIn</a>
-                        </div> 
+                          <a href="https://de.linkedin.com/in/dominik-hoehr"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                        </div>
                         &nbsp;&nbsp;&nbsp;
                         <div class="link-button">
                           <a href="https://github.com/hrdominik"><i class="fab fa-github"></i> GitHub</a>
@@ -225,8 +225,20 @@
                 </label>
               </div>
               <div class="row career">
+                <!-- <div class="cv-item work" data-type="work">
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Oktober 2023</div></div>
+                  <h4>Referent für IT</h4>
+                  <p><a href="https://asta.upb.de" id="service-place">AStA Universität Paderborn <i class="fas fa-link"></i></a></p>
+                  <i>Koordination der IT</i>
+                </div> -->
                 <div class="cv-item work" data-type="work">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Oktober 2022</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Juli 2023</div></div>
+                  <h4>Geschäftsführung</h4>
+                  <p><a href="https://www.lookin-messe.de" id="service-place">LOOK IN! GbR <i class="fas fa-link"></i></a></p>
+                  <i>Geschäftsführung und Durchführung der Firmenkontaktmesse</i>
+                </div>
+                <div class="cv-item work" data-type="work">
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Oktober 2022 - Oktober 2023</div></div>
                   <h4>Referent für Kultur</h4>
                   <p><a href="https://asta.upb.de" id="service-place">AStA Universität Paderborn <i class="fas fa-link"></i></a></p>
                   <i>Gestaltung der Kultur an und um den Campus für die Studierenden der Universität Paderborn<br/><div class="spacer"></div>Unterstützung der Aktivenschaft</i>
@@ -235,7 +247,7 @@
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Seit Oktober 2022</div></div>
                   <h4>Gewähltes Mitglied <br /><small>in verschiedenen Gremien</small></h4>
                   <p></p>
-                  <i>Fakultätsrat der Fakultät Wirtschaftswissenschaften <br/><div class="spacer"></div>Fachschaftsvertretung der Fakultät Wirtschaftswissenschaften <br/><div class="spacer"></div>Prüfungsausschuss Wirtschaftsinformatik<div class="spacer"></div>Kommission für Angelegenheiten des IMT</i>
+                  <i>Kommission für Angelegenheiten des IMT<br/><div class="spacer"></div>Fakultätsrat der Fakultät Wirtschaftswissenschaften <br/><div class="spacer"></div>Fachschaftsvertretung der Fakultät Wirtschaftswissenschaften <br/><div class="spacer"></div>Prüfungsausschuss Wirtschaftsinformatik</i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Seit Oktober 2022</div></div>
@@ -249,16 +261,16 @@
                   <i>Wirtschaftsinformatik, Master of Science </i>
                 </div>
                 <div class="cv-item work" data-type="work">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Januar 2022</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Januar 2022 - Juli 2023</div></div>
                   <h4>Ressortleitung Events</h4>
                   <p><a href="https://www.lookin-messe.de" id="service-place">LOOK IN! GbR <i class="fas fa-link"></i></a></p>
                   <i>Organisation von Events rund um die Firmenkontaktmesse</i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Oktober 2021 bis Oktober 2022</div></div>
-                  <h4>Gewähltes Mitglied <br /><small>in verschiedenen Kommissionen und Ausschüssen</small></h4>
+                  <h4>Gewähltes Mitglied <br /><small>in verschiedenen Gremien</small></h4>
                   <p></p>
-                  <i>Kommission für Angelegenheiten des IMT <br/><div class="spacer"></div>Haushaltsausschuss des Studierendenparlaments (Stellv. Vorsitz) <br/><div class="spacer"></div>Prüfungsausschuss Wirtschaftsinformatik</i>
+                  <i>Haushaltsausschuss des Studierendenparlaments (Stellv. Vorsitz) <br/><div class="spacer"></div>Kommission für Angelegenheiten des IMT <br/><div class="spacer"></div>Prüfungsausschuss Wirtschaftsinformatik</i>
                 </div>
                 <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon" ><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit August 2020</div></div>
