update slogan for architecture

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="col">
                       <p>
                         Interessiert bin ich an der Programmierung und die damit zusammenhängenden Prozesse in den Unternehmen und der Wirtschaft. <br /> 
-                        Insbesondere interessiere ich mich für das DevOps-Engineering.<br /> 
+                        Insbesondere interessiere ich mich für die System- und Netzwerkarchitektur verteilter Anwendungen.<br /> 
                         <br />
                         Aktuell studiere ich im 3. Semester des Master of Science Wirtschaftsinformatik und arbeite als Werkstudent in der IT-Consulting-Branche.
                       </p>
