update cv with AStA IT and BuFaK

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         Interessiert bin ich an der Programmierung und die damit zusammenhängenden Prozesse in den Unternehmen und der Wirtschaft. <br /> 
                         Insbesondere interessiere ich mich für die System- und Netzwerkarchitektur verteilter Anwendungen.<br /> 
                         <br />
-                        Aktuell studiere ich im 3. Semester des Master of Science Wirtschaftsinformatik und arbeite als Werkstudent in der IT-Consulting-Branche.
+                        Aktuell studiere ich im 4. Semester des Master of Science Wirtschaftsinformatik und arbeite als Werkstudent in der IT-Consulting-Branche.
                       </p>
                     </div>
                   </div>
@@ -226,17 +226,23 @@
                 </label>
               </div>
               <div class="row career">
-                <!-- <div class="cv-item work" data-type="work">
+                <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Oktober 2023</div></div>
                   <h4>Referent für IT</h4>
                   <p><a href="https://asta.upb.de" id="service-place">AStA Universität Paderborn <i class="fas fa-link"></i></a></p>
-                  <i>Koordination der IT</i>
-                </div> -->
+                  <i>Koordination der IT-Infrastruktur der Aktivenschaft der Universität</i>
+                </div>
                 <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Juli 2023</div></div>
                   <h4>Geschäftsführung</h4>
                   <p><a href="https://www.lookin-messe.de" id="service-place">LOOK IN! GbR <i class="fas fa-link"></i></a></p>
                   <i>Geschäftsführung und Durchführung der Firmenkontaktmesse</i>
+                </div>
+                <div class="cv-item work" data-type="work">
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Mai 2023</div></div>
+                  <h4>Gewählter Vereinsbeirat</h4>
+                  <p><a href="https://bufak-wiwi.org/" id="service-place">Verein der BuFaK WiWi e.V. <i class="fas fa-link"></i></a></p>
+                  <i>Unterstützung der Kontinuität und Durchführung der Bundesfachschaften Konferenzen</i>
                 </div>
                 <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Oktober 2022 - Oktober 2023</div></div>
