--- a/index.html
+++ b/index.html
@@ -239,6 +239,12 @@
                   <i>Geschäftsführung und Durchführung der Firmenkontaktmesse</i>
                 </div>
                 <div class="cv-item work" data-type="work">
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Juli 2023</div></div>
+                  <h4>Vereinsvorstand</h4>
+                  <p><a href="https://www.hgwinfo.de" id="service-place">Hoschulgruppe Wirtschaftsinformatik Paderborn e.V. <i class="fas fa-link"></i></a></p>
+                  <i></i>
+                </div>
+                <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Mai 2023</div></div>
                   <h4>Gewählter Vereinsbeirat</h4>
                   <p><a href="https://bufak-wiwi.org/" id="service-place">Verein der BuFaK WiWi e.V. <i class="fas fa-link"></i></a></p>
@@ -288,7 +294,7 @@
                 <div class="cv-item volunteer" data-type="volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Seit Oktober 2019</div></div>
                   <h4>Aktives Mitglied</h4>
-                  <p><a href="https://www.fsrwinfo.de" id="service-place">Fachschaftsrat Wirtschaftsinformatik <i class="fas fa-link"></i></a></p>
+                  <p><a href="https://www.fsrwinfo.de" id="service-place">Fachschaftsrat Wirtschaftsinformatik <i class="fas fa-link"></i></a><br/><div class="spacer"></div><a href="https://www.hgwinfo.de" id="service-place">Hoschulgruppe Wirtschaftsinformatik Paderborn e.V. <i class="fas fa-link"></i></a></p>
                 </div>
                 <div class="cv-item graduation" data-type="graduation">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i></div><div class="service-date">Oktober 2018 bis April 2022</div></div>
