--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Juli 2023</div></div>
                   <h4>Vereinsvorstand</h4>
-                  <p><a href="https://www.hgwinfo.de" id="service-place">Hoschulgruppe Wirtschaftsinformatik Paderborn e.V. <i class="fas fa-link"></i></a></p>
+                  <p><a href="https://www.hgwinfo.de" id="service-place">Hochschulgruppe Wirtschaftsinformatik Paderborn e.V. <i class="fas fa-link"></i></a></p>
                   <i></i>
                 </div>
                 <div class="cv-item work" data-type="work">
@@ -294,7 +294,7 @@
                 <div class="cv-item volunteer" data-type="volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Seit Oktober 2019</div></div>
                   <h4>Aktives Mitglied</h4>
-                  <p><a href="https://www.fsrwinfo.de" id="service-place">Fachschaftsrat Wirtschaftsinformatik <i class="fas fa-link"></i></a><br/><div class="spacer"></div>Hoschulgruppe Wirtschaftsinformatik Paderborn e.V.</p>
+                  <p><a href="https://www.fsrwinfo.de" id="service-place">Fachschaftsrat Wirtschaftsinformatik <i class="fas fa-link"></i></a><br/><div class="spacer"></div>Hochschulgruppe Wirtschaftsinformatik Paderborn e.V.</p>
                 </div>
                 <div class="cv-item graduation" data-type="graduation">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i></div><div class="service-date">Oktober 2018 bis April 2022</div></div>
