--- a/index.html
+++ b/index.html
@@ -226,11 +226,17 @@
                 </label>
               </div>
               <div class="row career">
+                <div class="cv-item volunteer" data-type="work">
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Mai 2024</div></div>
+                  <h4>Mitglied im Vereinsvorstand</h4>
+                  <p><a href="https://bufak-wiwi.org/" id="service-place">Verein der BuFaK WiWi e.V. <i class="fas fa-link"></i></a></p>
+                  <i>Unterstützung der Kontinuität und Durchführung der Bundesfachschaften Konferenzen</i>
+                </div>
                 <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Oktober 2023</div></div>
                   <h4>Referent für IT</h4>
                   <p><a href="https://asta.upb.de" id="service-place">AStA Universität Paderborn <i class="fas fa-link"></i></a></p>
-                  <i>Koordination der IT-Infrastruktur der Aktivenschaft der Universität</i>
+                  <i>Koordination der IT-Infrastruktur des AStA und der Aktivenschaft der Universität</i>
                 </div>
                 <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Juli 2023</div></div>
@@ -238,14 +244,14 @@
                   <p><a href="https://www.lookin-messe.de" id="service-place">LOOK IN! GbR <i class="fas fa-link"></i></a></p>
                   <i>Geschäftsführung und Durchführung der Firmenkontaktmesse</i>
                 </div>
-                <div class="cv-item work" data-type="work">
+                <div class="cv-item volunteer" data-type="work">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Juli 2023</div></div>
-                  <h4>Vereinsvorstand</h4>
+                  <h4>Mitglied im Vereinsvorstand</h4>
                   <p><a href="https://www.hgwinfo.de" id="service-place">Hochschulgruppe Wirtschaftsinformatik Paderborn e.V. <i class="fas fa-link"></i></a></p>
                   <i></i>
                 </div>
-                <div class="cv-item work" data-type="work">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Mai 2023</div></div>
+                <div class="cv-item volunteer" data-type="work">
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Mai 2023 - Mai 2024</div></div>
                   <h4>Gewählter Vereinsbeirat</h4>
                   <p><a href="https://bufak-wiwi.org/" id="service-place">Verein der BuFaK WiWi e.V. <i class="fas fa-link"></i></a></p>
                   <i>Unterstützung der Kontinuität und Durchführung der Bundesfachschaften Konferenzen</i>
