improve responsibilities of my cv

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 </label>
               </div>
               <div class="row career">
-                <div class="cv-item volunteer" data-type="work">
+                <div class="cv-item volunteer" data-type="volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Mai 2024</div></div>
                   <h4>Mitglied im Vereinsvorstand</h4>
                   <p><a href="https://bufak-wiwi.org/" id="service-place">Verein der BuFaK WiWi e.V. <i class="fas fa-link"></i></a></p>
@@ -235,8 +235,8 @@
                 <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Oktober 2023</div></div>
                   <h4>Referent für IT</h4>
-                  <p><a href="https://asta.upb.de" id="service-place">AStA Universität Paderborn <i class="fas fa-link"></i></a></p>
-                  <i>Koordination der IT-Infrastruktur des AStA und der Aktivenschaft der Universität</i>
+                  <p><a href="https://asta.upb.de" id="service-place">Allgemeiner Studierendenausschuss der Universität Paderborn <i class="fas fa-link"></i></a></p>
+                  <i>Konzeptionierung und Koordination der IT-Infrastruktur des AStA und der Aktivenschaft der Universität<br/><div class="spacer"></div>Verantwortung von 3 Mitarbeitern</i>
                 </div>
                 <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Juli 2023</div></div>
@@ -244,13 +244,13 @@
                   <p><a href="https://www.lookin-messe.de" id="service-place">LOOK IN! GbR <i class="fas fa-link"></i></a></p>
                   <i>Geschäftsführung und Durchführung der Firmenkontaktmesse</i>
                 </div>
-                <div class="cv-item volunteer" data-type="work">
+                <div class="cv-item volunteer" data-type="volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Juli 2023</div></div>
                   <h4>Mitglied im Vereinsvorstand</h4>
                   <p><a href="https://www.hgwinfo.de" id="service-place">Hochschulgruppe Wirtschaftsinformatik Paderborn e.V. <i class="fas fa-link"></i></a></p>
                   <i></i>
                 </div>
-                <div class="cv-item volunteer" data-type="work">
+                <div class="cv-item volunteer" data-type="volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Mai 2023 - Mai 2024</div></div>
                   <h4>Gewählter Vereinsbeirat</h4>
                   <p><a href="https://bufak-wiwi.org/" id="service-place">Verein der BuFaK WiWi e.V. <i class="fas fa-link"></i></a></p>
@@ -259,7 +259,7 @@
                 <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Oktober 2022 - Oktober 2023</div></div>
                   <h4>Referent für Kultur</h4>
-                  <p><a href="https://asta.upb.de" id="service-place">AStA Universität Paderborn <i class="fas fa-link"></i></a></p>
+                  <p><a href="https://asta.upb.de" id="service-place">Allgemeiner Studierendenausschuss der Universität Paderborn <i class="fas fa-link"></i></a></p>
                   <i>Gestaltung der Kultur an und um den Campus für die Studierenden der Universität Paderborn<br/><div class="spacer"></div>Unterstützung der Aktivenschaft</i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
