update cv; improve skills

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         Interessiert bin ich an der Programmierung und die damit zusammenhängenden Prozesse in den Unternehmen und der Wirtschaft. <br /> 
                         Insbesondere interessiere ich mich für die System- und Netzwerkarchitektur verteilter Anwendungen.<br /> 
                         <br />
-                        Aktuell studiere ich im 4. Semester des Master of Science Wirtschaftsinformatik und arbeite als Werkstudent in der IT-Consulting-Branche.
+                        Aktuell studiere ich im 5. Semester des Master of Science Wirtschaftsinformatik und arbeite als Werkstudent in der IT-Consulting-Branche.
                       </p>
                     </div>
                   </div>
@@ -137,26 +137,28 @@
                         <span title="HTML5"><i class="fab fa-html5"></i></span>
                         <span title="CSS3, Sass"><i class="fab fa-css3"></i></span>
                         <span title="ReactJS"><i class="fab fa-react"></i></span>
-                        <span title="JavaScript"><i class="fab fa-js"></i></span>
+                        <span title="Typescript, Javascript"><i class="fab fa-js"></i></span>
+                        <span title="Flutter"><i class="fab fa-flutter"></i></span>
                       </div>
                       <h4>Backend</h4>
                       <div class="skill-list">
-                        <span title="Python"><i class="fab fa-python"></i></span>
+                        <span title="Python, insb. FastAPI und Flask Server"><i class="fab fa-python"></i></span>
                         <span title="JakartaEE"><i class="fab fa-java"></i></span>
+                        <span title="C#"><i class="fas fa-c"></i></span>
                         <span title="SQL"><i class="fas fa-database"></i></span>
                       </div>
                       <h4>Entwicklungs- und Buildprozess</h4>
                       <div class="skill-list">
-                        <span title="git"><i class="fa-solid fa-code-branch"></i></span>
-                        <span title="docker / docker compose"><i class="fab fa-docker"></i></span>
-                        <span title="yarn"><i class="fab fa-yarn"></i></span>
+                        <span title="git"><i class="fas fa-code-branch"></i></span>
+                        <span title="docker, docker compose"><i class="fab fa-docker"></i></span>
+                        <span title="Maven, yarn, pnpm"><i class="fas fa-cube"></i></span>
                         <span title="Nginx"><i class="fas fa-server"></i></span>
                       </div>
                       <h4>Weitere</h4>
                       <div class="skill-list">
                         <span title="Amazon Web Services (Inbs. Amazon Elastic und RDS)"><i class="fa-brands fa-aws"></i></span>
                         <span title="cli (shell und bash)"><i class="fa fa-terminal"></i></span>
-                        <span title="Microsoft 365"><i class="fab fa-microsoft"></i><small style="position: absolute; width: 80px">Insbesondere Sharepoint und Teams</small></span>
+                        <span title="Markdown, LaTeX"><i class="fab fa-markdown"></i></span>
                       </div>
                     </figcaption>
                   </figure>
@@ -172,7 +174,6 @@
                       <div class="skill-list">
                         <span title="SCRUM"><i class="fas fa-tasks"></i></span>
                         <span title="Projektmanagement"><i class="fas fa-project-diagram"></i></span>
-                        <span title="Atlassian Jira Software"><i class="fa-brands fa-jira"></i></span>
                       </div>
                       <h4>Modellierung</h4>
                       <div class="skill-list">
@@ -184,10 +185,12 @@
                       <div class="skill-list">
                         <span title="SAP"><i class="fab">SAP</i></span>
                         <span title="Data Science, CRISP-DM, R"><i class="fab fa-r-project"></i></span>
+                        <span title="Atlassian Jira Software"><i class="fa-brands fa-jira"></i></span>
                       </div>
                       <h4>Weitere</h4>
                       <div class="skill-list">
                         <span title="Social Media Understanding"><i class="fas fa-hashtag"></i></span>
+                        <span title="Microsoft 365"><i class="fab fa-microsoft"></i><small style="position: absolute; width: 80px">Insbesondere Sharepoint und Teams</small></span>
                       </div>
                     </figcaption>
                   </figure>
@@ -226,20 +229,32 @@
                 </label>
               </div>
               <div class="row career">
+                <div class="cv-item work" data-type="work">
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">seit Juli 2024</div></div>
+                  <h4>Ressortleitung IT</h4>
+                  <p><a href="https://www.lookin-messe.de" id="service-place">LOOK IN! GbR <i class="fas fa-link"></i></a></p>
+                  <i>Sicherstellung der IT-Infrastruktur und Support</i>
+                </div>
                 <div class="cv-item volunteer" data-type="volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Mai 2024</div></div>
                   <h4>Mitglied im Vereinsvorstand</h4>
                   <p><a href="https://bufak-wiwi.org/" id="service-place">Verein der BuFaK WiWi e.V. <i class="fas fa-link"></i></a></p>
                   <i>Unterstützung der Kontinuität und Durchführung der Bundesfachschaften Konferenzen</i>
                 </div>
+                <div class="cv-item volunteer" data-type="volunteer">
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">April 2024</div></div>
+                  <h4>Teilnahme</h4>
+                  <p><a href="https://jax.de/" id="service-place">Jax 2024, Die Konferenz für Java, Architektur- und Software-Innovation<i class="fas fa-link"></i></a></p>
+                  <i>Entwicklermesse mit Themen über Java API, microservices, GitOps und Quantencomputing</i>
+                </div>
                 <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Oktober 2023</div></div>
                   <h4>Referent für IT</h4>
                   <p><a href="https://asta.upb.de" id="service-place">Allgemeiner Studierendenausschuss der Universität Paderborn <i class="fas fa-link"></i></a></p>
-                  <i>Konzeptionierung und Koordination der IT-Infrastruktur des AStA und der Aktivenschaft der Universität<br/><div class="spacer"></div>Verantwortung von 3 Mitarbeitern</i>
+                  <i>Konzeptionierung und Koordination der IT-Infrastruktur des AStA und der Aktivenschaft der Universität<br/><div class="spacer"></div>Wartung, Entwicklung und Prozessoptimierung<br/><div class="spacer"></div>Verantwortung von 3 Mitarbeitern</i>
                 </div>
                 <div class="cv-item work" data-type="work">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Juli 2023</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Juli 2023 - Juli 2024</div></div>
                   <h4>Geschäftsführung</h4>
                   <p><a href="https://www.lookin-messe.de" id="service-place">LOOK IN! GbR <i class="fas fa-link"></i></a></p>
                   <i>Geschäftsführung und Durchführung der Firmenkontaktmesse</i>
