--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
                       </div>
                       <h4>Backend</h4>
                       <div class="skill-list">
-                        <span title="Python, insb. FastAPI und Flask Server"><i class="fab fa-python"></i></span>
+                        <span title="Python, insb. FastAPI- und Flask Server"><i class="fab fa-python"></i></span>
                         <span title="JakartaEE"><i class="fab fa-java"></i></span>
                         <span title="C#"><i class="fas fa-c"></i></span>
                         <span title="SQL"><i class="fas fa-database"></i></span>
                       </div>
                       <h4>Entwicklungs- und Buildprozess</h4>
                       <div class="skill-list">
-                        <span title="git"><i class="fas fa-code-branch"></i></span>
+                        <span title="git, GitLab, CI/CD"><i class="fas fa-code-branch"></i></span>
                         <span title="docker, docker compose"><i class="fab fa-docker"></i></span>
                         <span title="Maven, yarn, pnpm"><i class="fas fa-cube"></i></span>
                         <span title="Nginx"><i class="fas fa-server"></i></span>
