--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <span title="CSS3, Sass"><i class="fab fa-css3"></i></span>
                         <span title="ReactJS"><i class="fab fa-react"></i></span>
                         <span title="Typescript, Javascript"><i class="fab fa-js"></i></span>
-                        <span title="Flutter"><i class="fab fa-flutter"></i></span>
+                        <span title="Flutter"><i class="fa-solid fa-mobile"></i></span>
                       </div>
                       <h4>Backend</h4>
                       <div class="skill-list">
@@ -190,12 +190,91 @@
                       <h4>Weitere</h4>
                       <div class="skill-list">
                         <span title="Social Media Understanding"><i class="fas fa-hashtag"></i></span>
-                        <span title="Microsoft 365"><i class="fab fa-microsoft"></i><small style="position: absolute; width: 80px">Insbesondere Sharepoint und Teams</small></span>
+                        <span title="Microsoft 365"><i class="fab fa-microsoft"></i><small style="position: absolute; width: 80px">Insb. Flow, Sharepoint und AD</small></span>
                       </div>
                     </figcaption>
                   </figure>
                 </div>
               </div>
+              <!-- <div class="col heading">
+                <h3>Projekte</h3>
+                <div class="line-dec"></div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <figure class="skill project">
+                    <div class="heading">
+                      <h4>Raumbuchung</h4>
+                    </div>
+                    <figcaption>
+                      <p>
+                        Webanwendung zur Raumbuchung verschiedener Raumtypen und zur Verwaltung von Nutzer(-gruppen) und deren Berechtigungen.
+                      </p>
+                      <div class="skill-list">
+                        <span title="Python, FastAPI"><i class="fab fa-python"></i></span>
+                        <span title="Typescript, ReactJS"><i class="fab fa-react"></i></span>
+                        <span title="CI/CD via webhook und docker compose"><i class="fas fa-code-branch"></i></span>
+                      </div>
+                    </figcaption>
+                  </figure>
+                  <figure class="skill project">
+                    <div class="heading">
+                      <h4>Semesterticket</h4>
+                    </div>
+                    <figcaption>
+                      <p>
+                        Mobileapp zur Anzeige des Semestertickets und eines Deutschlandtickets für die Studierenden der Universität Paderborn.
+                      </p>
+                      <div class="skill-list">
+                        <span title="Flutter"><i class="fa-solid fa-mobile"></i></span>
+                      </div>
+                    </figcaption>
+                  </figure>
+                  <figure class="skill project">
+                    <div class="heading">
+                      <h4>Konferenzverwaltung</h4>
+                    </div>
+                    <figcaption>
+                      <p>
+                        Webanwendung zur Verwaltung und Ausrichtung von Konferenzen. Verwaltung von Teilnehmern, Workshops und Plenarsitzungen.
+                      </p>
+                      <div class="skill-list">
+                        <span title="Python, FastAPI"><i class="fab fa-python"></i></span>
+                        <span title="Typescript, ReactJS"><i class="fab fa-react"></i></span>
+                        <span title="CI/CD via ssh"><i class="fas fa-code-branch"></i></span>
+                      </div>
+                    </figcaption>
+                  </figure>
+                  <figure class="skill project">
+                    <div class="heading">
+                      <h4>Inventarverwaltung</h4>
+                    </div>
+                    <figcaption>
+                      <p>
+                        Webanwendung zur Verwaltung des Getränkeinventar und zur eigenständigen Buchung durch den Nutzer.
+                      </p>
+                      <div class="skill-list">
+                        <span title=".NET, C#, Javascript"><i class="fas fa-c"></i></span>
+                      </div>
+                    </figcaption>
+                  </figure>
+                  <figure class="skill project">
+                    <div class="heading">
+                      <h4>Beraterprofile</h4>
+                    </div>
+                    <figcaption>
+                      <p>
+                        Webanwendung zur Verwaltung von Stammdaten zu Beratern, Projekten und Kompetenzen. Erstellung eines dynamischen Beraterprofils (CV).
+                      </p>
+                      <div class="skill-list">
+                        <span title="JavaEE"><i class="fab fa-java"></i></span>
+                        <span title="Javascript, ReactJS"><i class="fab fa-react"></i></span>
+                        <span title="CI/CD via GitLab-Pipeline und Amazon Web Services"><i class="fa-brands fa-aws"></i></span>
+                      </div>
+                    </figcaption>
+                  </figure>
+                </div>
+              </div> -->
             </div>
           </section>
 
