--- a/index.html
+++ b/index.html
@@ -143,20 +143,23 @@
                       <h4>Backend</h4>
                       <div class="skill-list">
                         <span title="Python, insb. FastAPI- und Flask Server"><i class="fab fa-python"></i></span>
-                        <span title="JakartaEE"><i class="fab fa-java"></i></span>
-                        <span title="C#"><i class="fas fa-c"></i></span>
+                        <span title="Java/JakartaEE"><i class="fab fa-java"></i></span>
+                        <span title="C#, C"><i class="fas fa-c"></i></span>
                         <span title="SQL"><i class="fas fa-database"></i></span>
                       </div>
                       <h4>Entwicklungs- und Buildprozess</h4>
                       <div class="skill-list">
                         <span title="git, GitLab, CI/CD"><i class="fas fa-code-branch"></i></span>
+                        <span title="Kubernetes, Helm"><i class="fas fa-cube"></i></span>
+                        <span title="Terrafom, Ansible"><i class="fas fa-cogs"></i></span>
                         <span title="docker, docker compose"><i class="fab fa-docker"></i></span>
-                        <span title="Maven, yarn, pnpm"><i class="fas fa-cube"></i></span>
+                        <span title="maven, yarn, pnpm"><i class="fas fa-cube"></i></span>
                         <span title="Nginx"><i class="fas fa-server"></i></span>
                       </div>
                       <h4>Weitere</h4>
                       <div class="skill-list">
-                        <span title="Amazon Web Services (Inbs. Amazon Elastic und RDS)"><i class="fa-brands fa-aws"></i></span>
+                        <span title="Amazon Web Services (Insb. Amazon Elastic und RDS)"><i class="fa-brands fa-aws"></i></span>
+                        <span title="Microsoft Azure (Insb. Azure Kubernetes Service)"><i class="fab fa-microsoft"></i></span>
                         <span title="cli (shell und bash)"><i class="fa fa-terminal"></i></span>
                         <span title="Markdown, LaTeX"><i class="fab fa-markdown"></i></span>
                       </div>
@@ -174,12 +177,13 @@
                       <div class="skill-list">
                         <span title="SCRUM"><i class="fas fa-tasks"></i></span>
                         <span title="Projektmanagement"><i class="fas fa-project-diagram"></i></span>
+                        <span title="Risikomanagement"><i class="fas fa-exclamation-triangle"></i></span>
                       </div>
                       <h4>Modellierung</h4>
                       <div class="skill-list">
                         <span title="Business Process Model and Notation 2.0"><i class="fab" style="font-size: small;">BPMN</i></span>
                         <span title="Erweiterte Ereignisgesteuerte Prozesskette"><i class="fab" style="font-size: small;">eEPK</i></span>
-                        <span title="Datenbank Normalisierung"><i class="fas fa-database"></i></span>
+                        <span title="Datenbank Modellierung und Normalisierung"><i class="fas fa-database"></i></span>
                       </div>
                       <h4>Tools</h4>
                       <div class="skill-list">
@@ -214,6 +218,22 @@
                         <span title="Python, FastAPI"><i class="fab fa-python"></i></span>
                         <span title="Typescript, ReactJS"><i class="fab fa-react"></i></span>
                         <span title="CI/CD via webhook und docker compose"><i class="fas fa-code-branch"></i></span>
+                      </div>
+                    </figcaption>
+                  </figure>
+                  <figure class="skill project">
+                    <div class="heading">
+                      <h4>Kubernetes (local) Challenge</h4>
+                    </div>
+                    <figcaption>
+                      <p>
+                        Challenge zur Einrichtung eines Kubernetes-Clusters mit mehreren Nodes und Ingress-Controler zur Bereitstellung einer einfachen Webseite. Automatisierte Veröffentlichung mittels Terraform auf Azure Kubernetes Service.
+                      </p>
+                      <div class="skill-list">
+                        <span title="Kubernetes, Helm"><i class="fas fa-cube"></i></span>
+                        <span title="Terrafom, Ansible"><i class="fas fa-cogs"></i></span>
+                        <span title="Microsoft Azure (Insb. Azure Kubernetes Service)"><i class="fab fa-microsoft"></i></span>
+                        <span title="Nginx"><i class="fas fa-server"></i></span>
                       </div>
                     </figcaption>
                   </figure>
@@ -309,6 +329,18 @@
               </div>
               <div class="row career">
                 <div class="cv-item work" data-type="work">
+                  <div class="cv-head"><div class="service-icon" ><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Dezember 2024</div></div>
+                  <h4>Werkstudent</h4>
+                  <p><a href="https://www.cgi.com" id="service-place">CGI <i class="fas fa-link"></i></a></p>
+                  <i><br /><div class="spacer"></div> DevOps- und Cloud-Engineer</i>
+                </div>
+                <div class="cv-item volunteer" data-type="volunteer">
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Seit Oktober 2024</div></div>
+                  <h4>Gewähltes Mitglied <br /><small>in verschiedenen Gremien</small></h4>
+                  <p></p>
+                  <i>Kommission für Angelegenheiten des IMT<br/><div class="spacer"></div>Studierendenparlament</i>
+                </div>
+                <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">seit Juli 2024</div></div>
                   <h4>Ressortleitung IT</h4>
                   <p><a href="https://www.lookin-messe.de" id="service-place">LOOK IN! GbR <i class="fas fa-link"></i></a></p>
@@ -327,13 +359,13 @@
                   <i>Entwicklermesse mit Themen über Java API, microservices, GitOps und Quantencomputing</i>
                 </div>
                 <div class="cv-item work" data-type="work">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Oktober 2023</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Oktober 2023 bis Oktober 2024</div></div>
                   <h4>Referent für IT</h4>
                   <p><a href="https://asta.upb.de" id="service-place">Allgemeiner Studierendenausschuss der Universität Paderborn <i class="fas fa-link"></i></a></p>
                   <i>Konzeptionierung und Koordination der IT-Infrastruktur des AStA und der Aktivenschaft der Universität<br/><div class="spacer"></div>Wartung, Entwicklung und Prozessoptimierung<br/><div class="spacer"></div>Verantwortung von 3 Mitarbeitern</i>
                 </div>
                 <div class="cv-item work" data-type="work">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Juli 2023 - Juli 2024</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Juli 2023 bis Juli 2024</div></div>
                   <h4>Geschäftsführung</h4>
                   <p><a href="https://www.lookin-messe.de" id="service-place">LOOK IN! GbR <i class="fas fa-link"></i></a></p>
                   <i>Geschäftsführung und Durchführung der Firmenkontaktmesse</i>
@@ -345,19 +377,19 @@
                   <i></i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Mai 2023 - Mai 2024</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Mai 2023 bis Mai 2024</div></div>
                   <h4>Gewählter Vereinsbeirat</h4>
                   <p><a href="https://bufak-wiwi.org/" id="service-place">Verein der BuFaK WiWi e.V. <i class="fas fa-link"></i></a></p>
                   <i>Unterstützung der Kontinuität und Durchführung der Bundesfachschaften Konferenzen</i>
                 </div>
                 <div class="cv-item work" data-type="work">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Oktober 2022 - Oktober 2023</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Oktober 2022 bis Oktober 2023</div></div>
                   <h4>Referent für Kultur</h4>
                   <p><a href="https://asta.upb.de" id="service-place">Allgemeiner Studierendenausschuss der Universität Paderborn <i class="fas fa-link"></i></a></p>
                   <i>Gestaltung der Kultur an und um den Campus für die Studierenden der Universität Paderborn<br/><div class="spacer"></div>Unterstützung der Aktivenschaft</i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Seit Oktober 2022</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Oktober 2022 bis Oktober 2024</div></div>
                   <h4>Gewähltes Mitglied <br /><small>in verschiedenen Gremien</small></h4>
                   <p></p>
                   <i>Kommission für Angelegenheiten des IMT<br/><div class="spacer"></div>Fakultätsrat der Fakultät Wirtschaftswissenschaften <br/><div class="spacer"></div>Fachschaftsvertretung der Fakultät Wirtschaftswissenschaften <br/><div class="spacer"></div>Prüfungsausschuss Wirtschaftsinformatik</i>
@@ -374,7 +406,7 @@
                   <i>Wirtschaftsinformatik, Master of Science </i>
                 </div>
                 <div class="cv-item work" data-type="work">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Januar 2022 - Juli 2023</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Januar 2022 bis Juli 2023</div></div>
                   <h4>Ressortleitung Events</h4>
                   <p><a href="https://www.lookin-messe.de" id="service-place">LOOK IN! GbR <i class="fas fa-link"></i></a></p>
                   <i>Organisation von Events rund um die Firmenkontaktmesse</i>
@@ -386,7 +418,7 @@
                   <i>Haushaltsausschuss des Studierendenparlaments (Stellv. Vorsitz) <br/><div class="spacer"></div>Kommission für Angelegenheiten des IMT <br/><div class="spacer"></div>Prüfungsausschuss Wirtschaftsinformatik</i>
                 </div>
                 <div class="cv-item work" data-type="work">
-                  <div class="cv-head"><div class="service-icon" ><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit August 2020</div></div>
+                  <div class="cv-head"><div class="service-icon" ><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">August 2020 bis Novemeber 2024</div></div>
                   <h4>Werkstudent</h4>
                   <p><a href="https://www.beckmann-partner.de" id="service-place">Beckmann & Partner Consult <i class="fas fa-link"></i></a></p>
                   <i>Konzeptionierung und Realisierung interner Projekte. <br /><div class="spacer"></div> Full-Stack-Entwickler / DevOps-Engineer für RESTful Webservices und deren Architektur.</i>
@@ -411,7 +443,7 @@
                 <div class="cv-item volunteer" data-type="volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date"></div></div>
                   <h4>Teilnahme</h4>
-                  <p><a href="https://www.pyddf.de" id="service-place">Pythn Sprints, Düsseldorf (PyDDF) <i class="fas fa-link"></i></a></p>
+                  <p><a href="https://www.pyddf.de" id="service-place">Python Sprints, Düsseldorf (PyDDF) <i class="fas fa-link"></i></a></p>
                   <i>und weitere Meetings</i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
