update cv with cgi

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a class="d-flex justify-content-around align-self-center desktop-only-im" href=""><img src="./static/DHR_squared.png" alt="Dominik, myself as a portrait for business" style="width: 50%;" /></a>
               <div id="titel-text" class="text-center mt-3">
                 <h4>Dominik Höhr</h4>
-                <span>Student</span>
+                <span>Student | DevOps @ CGI</span>
               </div>
               <a id="nav-icon" class="mobile-only" onclick="toggleMobileMenu()"><i class="fa-solid fa-bars"></i></a>
             </div>
@@ -91,7 +91,7 @@
                         Interessiert bin ich an der Programmierung und die damit zusammenhängenden Prozesse in den Unternehmen und der Wirtschaft. <br /> 
                         Insbesondere interessiere ich mich für die System- und Netzwerkarchitektur verteilter Anwendungen.<br /> 
                         <br />
-                        Aktuell studiere ich im 5. Semester des Master of Science Wirtschaftsinformatik und arbeite als Werkstudent in der IT-Consulting-Branche.
+                        Aktuell studiere ich im 6. Semester des Master of Science Wirtschaftsinformatik und arbeite als Werkstudent in der IT-Consulting-Branche.
                       </p>
                     </div>
                   </div>
@@ -330,9 +330,9 @@
               <div class="row career">
                 <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon" ><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Dezember 2024</div></div>
-                  <h4>Werkstudent</h4>
+                  <h4>DevOps- und Cloud-Engineer</h4>
                   <p><a href="https://www.cgi.com" id="service-place">CGI <i class="fas fa-link"></i></a></p>
-                  <i><br /><div class="spacer"></div> DevOps- und Cloud-Engineer</i>
+                  <!-- <i><br /><div class="spacer"></div> Werkstudent</i> -->
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Seit Oktober 2024</div></div>
