--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         Interessiert bin ich an der Programmierung und die damit zusammenhängenden Prozesse in den Unternehmen und der Wirtschaft. <br /> 
                         Insbesondere interessiere ich mich für die System- und Netzwerkarchitektur verteilter Anwendungen.<br /> 
                         <br />
-                        Aktuell studiere ich im 6. Semester des Master of Science Wirtschaftsinformatik und arbeite als Werkstudent in der IT-Consulting-Branche.
+                        Aktuell studiere ich im 6. Semester des Master of Science Wirtschaftsinformatik und arbeite im IT Consulting.
                       </p>
                     </div>
                   </div>
@@ -341,7 +341,7 @@
                   <i>Kommission für Angelegenheiten des IMT<br/><div class="spacer"></div>Studierendenparlament</i>
                 </div>
                 <div class="cv-item work" data-type="work">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">seit Juli 2024</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Juli 2024</div></div>
                   <h4>Ressortleitung IT</h4>
                   <p><a href="https://www.lookin-messe.de" id="service-place">LOOK IN! GbR <i class="fas fa-link"></i></a></p>
                   <i>Sicherstellung der IT-Infrastruktur und Support</i>
@@ -418,7 +418,7 @@
                   <i>Haushaltsausschuss des Studierendenparlaments (Stellv. Vorsitz) <br/><div class="spacer"></div>Kommission für Angelegenheiten des IMT <br/><div class="spacer"></div>Prüfungsausschuss Wirtschaftsinformatik</i>
                 </div>
                 <div class="cv-item work" data-type="work">
-                  <div class="cv-head"><div class="service-icon" ><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">August 2020 bis Novemeber 2024</div></div>
+                  <div class="cv-head"><div class="service-icon" ><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">August 2020 bis November 2024</div></div>
                   <h4>Werkstudent</h4>
                   <p><a href="https://www.beckmann-partner.de" id="service-place">Beckmann & Partner Consult <i class="fas fa-link"></i></a></p>
                   <i>Konzeptionierung und Realisierung interner Projekte. <br /><div class="spacer"></div> Full-Stack-Entwickler / DevOps-Engineer für RESTful Webservices und deren Architektur.</i>
